--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/oslabs-beta/stabrabbit7#readme",
   "dependencies": {
+    "express": "^4.18.1",
     "socket.io": "^4.5.1",
     "socket.io-client": "^4.5.1"
   },
