--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "handshake.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "react-scripts start"
+    "start": "react-scripts start",
+    "dev": "webpack serve"
   },
   "repository": {
     "type": "git",
@@ -18,17 +19,23 @@
   },
   "homepage": "https://github.com/oslabs-beta/stabrabbit7#readme",
   "dependencies": {
-    "express": "^4.18.1",
-    "socket.io": "^4.5.1",
-    "socket.io-client": "^4.5.1",
+    "@babel/preset-env": "^7.18.10",
+    "@babel/preset-react": "^7.18.6",
     "@tensorflow/tfjs-node": "^3.19.0",
+    "express": "^4.18.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-flow-renderer": "^10.3.16",
     "react-scripts": "5.0.1",
+    "sass-loader": "^13.0.2",
+    "socket.io": "^4.5.1",
+    "socket.io-client": "^4.5.1",
     "web-vitals": "^2.1.4"
   },
   "bin": {
     "stabrabbit7": "./server.js"
+  },
+  "devDependencies": {
+    "webpack-cli": "^4.10.0"
   }
 }
