--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "handshake.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "react-scripts start",
-    "dev": "webpack serve"
+    "start": "nodemon ./server.js",
+    "dev": "webpack serve",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
