--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon ./server.js",
     "dev": "webpack serve",
+    "format": "prettier --write \"***/**/*.{js,jsx}\"",
     "build": "webpack"
   },
   "repository": {
@@ -24,6 +25,7 @@
     "@babel/preset-react": "^7.18.6",
     "@tensorflow/tfjs-node": "^3.19.0",
     "express": "^4.18.1",
+    "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-flow-renderer": "^10.3.16",
