--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-flow-renderer": "^10.3.16",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "sass-loader": "^13.0.2",
     "socket.io": "^4.5.1",
