--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "stabrabbit7": "./server.js"
   },
   "devDependencies": {
+    "svg-inline-loader": "^0.8.2",
     "webpack-cli": "^4.10.0"
   }
 }
