--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "sass-loader": "^13.0.2",
     "socket.io": "^4.5.1",
     "socket.io-client": "^4.5.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "url-loader": "^4.1.1"
   },
   "bin": {
     "stabrabbit7": "./server.js"
