--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
   "dependencies": {
     "@babel/preset-env": "^7.18.10",
     "@babel/preset-react": "^7.18.6",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@mui/material": "^5.10.3",
     "@tensorflow/tfjs-node": "^3.19.0",
     "express": "^4.18.1",
     "prettier": "^2.7.1",
@@ -34,8 +37,8 @@
     "sass-loader": "^13.0.2",
     "socket.io": "^4.5.1",
     "socket.io-client": "^4.5.1",
-    "web-vitals": "^2.1.4",
-    "url-loader": "^4.1.1"
+    "url-loader": "^4.1.1",
+    "web-vitals": "^2.1.4"
   },
   "bin": {
     "stabrabbit7": "./server.js"
