--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "concurrently": "^7.3.0",
     "d3": "^7.6.1",
     "express": "^4.18.1",
+    "nodemon": "^2.0.20",
     "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
