--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.3",
   "description": "",
   "main": "handshake.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon ./server.js",
@@ -50,5 +51,9 @@
     "jest": "^29.2.2",
     "svg-inline-loader": "^0.8.2",
     "webpack-cli": "^4.10.0"
+  },
+  "jest": {
+    "testEnvironment": "jest-environment-node",
+    "transform": {}
   }
 }
